Second attempt to fuzz jsoup

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ tasks.register("jarParseStep1", FuzzerJar, "parse.step1")
 tasks.register("jarParseStep2", FuzzerJar, "parse.step2")
 tasks.register("jarParseStep3", FuzzerJar, "parse.step3")
 tasks.register("jarParse", FuzzerJar, "parse")
-tasks.register("jarHTMLparse", FuzzerJar, "HTMLparse")
+tasks.register("jarHTMLparseStep1", FuzzerJar, "HTMLparse.step1")
+tasks.register("jarHTMLparseStep2", FuzzerJar, "HTMLparse.step2")
 
-jar.dependsOn(jarTimsort, jarRotate, jarParseStep1, jarParseStep2, jarParseStep3, jarParse, jarHTMLparse)
+jar.dependsOn(jarTimsort, jarRotate, jarParseStep1, jarParseStep2, jarParseStep3, jarParse, jarHTMLparseStep1, jarHTMLparseStep2)
